--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
+											<li><a href="about.html">About</a></li>
 											<li><a href="elements.html">Elements</a></li>
 											<li><a href="#">Sign Up</a></li>
 											<li><a href="#">Log In</a></li>
@@ -83,7 +83,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/fun.jpg" alt="" /></div><div class="content">
 								<h2>Fun Activities</h2>
-								<p>Get involved with our Spirit Week at UTA from Nov. 4 - 10. This is where you can meet the member of SASE and play games. This week will emphasize leadership, diveristy, and community service.  </p>
+								<p>Get involved with the workshops where you can gain new knowledge and skills with friends. There will be performances to watch and FREE giveaways. </p>
 							</div>
 						</section>
 					</section>
@@ -132,7 +132,7 @@
 							</header>
 							<ul class="actions stacked">
 								<li><a href="#" class="button fit primary">SIGN UP</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="about.html" class="button fit">Learn More</a></li>
 							</ul>
 						</div>
 					</section>
