--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="about.html">About</a></li>
-											<li><a href="elements.html">Elements</a></li>
+											<li><a href="sponsers.html">Sponsers</a></li>
 											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											
 										</ul>
 									</div>
 								</li>
