--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="about.html">About</a></li>
 											<li><a href="sponsers.html">Sponsers</a></li>
-											<li><a href="#">Sign Up</a></li>
+											<li><a href="https://forms.gle/F3rbeCKZbkpV2pPXA" target="_blank">Sign Up</a></li>
 											
 										</ul>
 									</div>
@@ -46,7 +46,7 @@
 							March 21, 2020<br />
 							</p>
 							<ul class="actions special">
-								<li><a href="#" class="button primary">SIGN UP</a></li>
+								<li><a href="https://forms.gle/F3rbeCKZbkpV2pPXA" target="_blank" class="button primary">SIGN UP</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
@@ -131,11 +131,13 @@
 								 - UTA SASE</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">SIGN UP</a></li>
+								<li><a href="https://forms.gle/F3rbeCKZbkpV2pPXA" target="_blank" class="button fit primary">SIGN UP</a></li>
 								<li><a href="about.html" class="button fit">Learn More</a></li>
 							</ul>
 						</div>
 					</section>
+
+					
 
 				<!-- Footer -->
 					<footer id="footer">
