--- a/sponsers.html
+++ b/sponsers.html
@@ -32,7 +32,7 @@
 									<li><a href="index.html">Home</a></li>
 									<li><a href="about.html">About</a></li>
 									<li><a href="sponsers.html">Sponsers</a></li>
-									<li><a href="#">Sign Up</a></li>
+									<li><a href="https://forms.gle/F3rbeCKZbkpV2pPXA" target="_blank">Sign Up</a></li>
 							</ul>
 						</div>
 					</li>
