--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@
 							<li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=utasase@gmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li> SASE</li><li>The University of Texas at Arlington</li>
+							<li> SASE</li><li>The University of Texas at Arlington</li><li><a href=privacy.html>Privacy Policy</a></li>
+							
 						</ul>
 					</footer>
 
