--- a/sponsers.html
+++ b/sponsers.html
@@ -82,8 +82,7 @@
 						class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
 			<ul class="copyright">
-				<li> SASE</li>
-				<li>The University of Texas at Arlington</li>
+					<li> SASE</li><li>The University of Texas at Arlington</li><li><a href=privacy.html>Privacy Policy</a></li>
 			</ul>
 		</footer>
 
