--- a/sponsors.html
+++ b/sponsors.html
@@ -22,7 +22,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<h1><a href="index.html">Sponsers</a></h1>
+			<h1><a href="index.html">Sponsors</a></h1>
 			<nav id="nav">
 				<ul>
 					<li class="special">
@@ -31,7 +31,7 @@
 							<ul>
 									<li><a href="index.html">Home</a></li>
 									<li><a href="about.html">About</a></li>
-									<li><a href="sponsers.html">Sponsers</a></li>
+									<li><a href="sponsors.html">Sponsors</a></li>
 									<li><a href="https://forms.gle/F3rbeCKZbkpV2pPXA" target="_blank">Sign Up</a></li>
 							</ul>
 						</div>
