--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="about.html">About</a></li>
-											<li><a href="sponsers.html">Sponsers</a></li>
+											<li><a href="sponsors.html">Sponsors</a></li>
 											<li><a href="https://forms.gle/F3rbeCKZbkpV2pPXA" target="_blank">Sign Up</a></li>
 											<!--https://forms.gle/F3rbeCKZbkpV2pPXA -->
 											
