--- a/sasegottalent.html
+++ b/sasegottalent.html
@@ -95,9 +95,16 @@
 
 								<h4>Photos of Brazos Park Stage</h4> <br/>
 
-								<img src="images/brazos1.jpg" alt="" height="400" width="600" />
-								<img src="images/brazos2.jpg" alt="" height="400" width="600" />
-
+								<style>
+								#brazos-image {
+									max-width: 100%;
+								}
+								</style>
+								
+								<div id="brazos-image">
+								<img class="brazos-image" src="images/brazos1.jpg" alt="" height="400" width="600" />
+								<img class="brazos-image" src="images/brazos2.jpg" alt="" height="400" width="600" />
+								</div>
 							</div>
 						</section>
 					</article>
