max width style

--- a/sasegottalent.html
+++ b/sasegottalent.html
@@ -96,14 +96,14 @@
 								<h4>Photos of Brazos Park Stage</h4> <br/>
 
 								<style>
-								#brazos-image {
-									max-width: 100%;
-								}
+								img {max-width: 80%;}
+
 								</style>
-								
+
+
 								<div id="brazos-image">
-								<img class="brazos-image" src="images/brazos1.jpg" alt="" height="400" width="600" />
-								<img class="brazos-image" src="images/brazos2.jpg" alt="" height="400" width="600" />
+								<img  src="images/brazos1.jpg" alt=""  />
+								<img  src="images/brazos2.jpg" alt=""  />
 								</div>
 							</div>
 						</section>
