--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 											<li><a href="about.html">About</a></li>
 											<li><a href="sponsors.html">Sponsors</a></li>
 											<li><a href="sasegottalent.html">Sase got talent</a></li>
+											<li><a href="scrcteam.html">SCRC Team</a></li>
 											<li><a href="https://forms.gle/F3rbeCKZbkpV2pPXA" target="_blank">Sign Up</a></li>
 											<!--https://forms.gle/F3rbeCKZbkpV2pPXA -->
 											
@@ -116,7 +117,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/lecture.jpg" height="500" alt="" /></div><div class="content">
+							<div class="image"><img src="images/lecture.jpg" alt="" /></div><div class="content">
 								<h2>Secret to Success</h2>
 								<p>Our speakers and sponsers will attend to give aspiring students many advices and information to help guide you in acheiving your dreams.</p>
 							</div>
