--- a/privacy.html
+++ b/privacy.html
@@ -30,6 +30,7 @@
 												<li><a href="about.html">About</a></li>
 												<li><a href="sponsors.html">Sponsors</a></li>
 												<li><a href="sasegottalent.html">Sase got talent</a></li>
+												<li><a href="scrcteam.html">SCRC Team</a></li>
 												<li><a href="https://forms.gle/F3rbeCKZbkpV2pPXA" target="_blank">Sign Up</a></li>
 										</ul>
 									</div>
