--- a/sponsors.html
+++ b/sponsors.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>About SCRC</title>
+	<title>SCRC Sponsors</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -33,6 +33,7 @@
 									<li><a href="about.html">About</a></li>
 									<li><a href="sponsors.html">Sponsors</a></li>
 									<li><a href="sasegottalent.html">Sase got talent</a></li>
+									<li><a href="scrcteam.html">SCRC Team</a></li>
 									<li><a href="https://forms.gle/F3rbeCKZbkpV2pPXA" target="_blank">Sign Up</a></li>
 							</ul>
 						</div>
