--- a/scrcteam.html
+++ b/scrcteam.html
@@ -55,16 +55,16 @@
 						<li>
 							<img src="images/GG.png">
 							
-							<p>Gaurav Ganthapodi </br> - SCRC Team Leader</p>
+							<p>Gaurav Ganthapodi </br> • SCRC Team Leader</p>
 						</li>
 
 						<li>
 							<img src="images/chriskim.png">
-							<p>Christopher Kim </br> - Website Designer & Manager</p>
+							<p>Christopher Kim </br> • Website Designer & Manager</p>
 						</li>
 						<li>
 							<img src="images/crystal.png">
-							<p>Crystal Le </br> - Graphic Designer</p>
+							<p>Crystal Le </br> • Graphic Designer</p>
 						</li>
 						<li>
 							<img src="images/vy.png">
