--- a/scrcteam.html
+++ b/scrcteam.html
@@ -51,9 +51,19 @@
 			<section id="three" class="wrapper style3 special">
 				<div class="inner">
 
+					<style>
+						
+						img {
+							width: auto;
+							height: 300px;
+							margin-left: 50px;
+						}
+
+
+						</style>
 					<ul class="features">
 						<li>
-							<img src="images/GG.png">
+							<img src="images/GG.png" class="center">
 							
 							<p>Gaurav Ganthapodi </br> • SCRC Team Leader</p>
 						</li>
@@ -63,7 +73,7 @@
 							<p>Christopher Kim </br> • Website Designer & Manager</p>
 						</li>
 						<li>
-							<img src="images/crystal.png">
+							<img src="images/crystal.png" class="center">
 							<p>Crystal Le </br> • Graphic Designer</p>
 						</li>
 						<li>
