--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 											<li><a href="sponsors.html">Sponsors</a></li>
 											<li><a href="sasegottalent.html">Sase got talent</a></li>
 											<li><a href="scrcteam.html">SCRC Team</a></li>
-											<li><a href="https://forms.gle/F3rbeCKZbkpV2pPXA" target="_blank">Sign Up</a></li>
+											<li><a href="https://forms.gle/gEKkaMh53BgR4APx5" target="_blank">Sign Up</a></li>
 											<!--https://forms.gle/F3rbeCKZbkpV2pPXA -->
 											
 										</ul>
@@ -84,7 +84,7 @@
 							March 21, 2020<br />
 							</p>
 							<ul class="actions special">
-								<li><a href="https://forms.gle/F3rbeCKZbkpV2pPXA" target="_blank" class="button primary">SIGN UP</a></li>
+								<li><a href="https://forms.gle/gEKkaMh53BgR4APx5" target="_blank" class="button primary">SIGN UP</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
@@ -182,7 +182,7 @@
 								 - UTA SASE</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="https://forms.gle/F3rbeCKZbkpV2pPXA" target="_blank" class="button fit primary">SIGN UP</a></li>
+								<li><a href="https://forms.gle/gEKkaMh53BgR4APx5" target="_blank" class="button fit primary">SIGN UP</a></li>
 								<li><a href="about.html" class="button fit">Learn More</a></li>
 							</ul>
 						</div>
