--- a/scrcteam.html
+++ b/scrcteam.html
@@ -34,7 +34,7 @@
 									<li><a href="sponsors.html">Sponsors</a></li>
 									<li><a href="sasegottalent.html">Sase got talent</a></li>
 									<li><a href="scrcteam.html">SCRC Team</a></li>
-									<li><a href="https://forms.gle/F3rbeCKZbkpV2pPXA" target="_blank">Sign Up</a></li>
+									<li><a href="https://forms.gle/gEKkaMh53BgR4APx5" target="_blank">Sign Up</a></li>
 							</ul>
 						</div>
 					</li>
@@ -48,6 +48,7 @@
 				<h2>The SCRC Team</h2>
 				<p>Members & Roles</p>
 				<img src="images/group.png" class="center">	
+				
 				
 			</header>
 			<section id="three" class="wrapper style3 special">
