--- a/sasegottalent.html
+++ b/sasegottalent.html
@@ -31,7 +31,7 @@
 												<li><a href="sponsors.html">Sponsors</a></li>
 												<li><a href="sasegottalent.html">Sase got talent</a></li>
 												<li><a href="scrcteam.html">SCRC Team</a></li>
-												<li><a href="https://forms.gle/gEKkaMh53BgR4APx5" target="_blank">Sign Up</a></li>
+												<li><a href="https://forms.gle/PkeeJkQmm5jyQBWt9" target="_blank">Sign Up</a></li>
 										</ul>
 									</div>
 								</li>
