--- a/scrcteam.html
+++ b/scrcteam.html
@@ -29,12 +29,15 @@
 						<a href="#menu" class="menuToggle"><span>Menu</span></a>
 						<div id="menu">
 							<ul>
-									<li><a href="index.html">Home</a></li>
-									<li><a href="about.html">About</a></li>
-									<li><a href="sponsors.html">Sponsors</a></li>
-									<li><a href="sasegottalent.html">Sase got talent</a></li>
-									<li><a href="scrcteam.html">SCRC Team</a></li>
-									<li><a href="https://forms.gle/PkeeJkQmm5jyQBWt9" target="_blank">Sign Up</a></li>
+								<li><a href="index.html">Home</a></li>
+								<li><a href="about.html">About</a></li>									
+								<li><a href="sasegottalent.html">Sase got talent</a></li>
+								<li><a href="lockheedmartintour.html">Lockheed Martin Tour</a></li>
+								<li><a href="schedule.html">Schedule</a></li>
+								<li><a href="https://docs.google.com/document/d/1Hh8x9chlsCkRhm7ogExBbQn7Mp-TMBIEYBiCsiJLgjA/edit?usp=sharing" target="_blank">Arlington Guide</a></li>
+								<li><a href="scrcteam.html">SCRC Team</a></li>
+								<li><a href="sponsors.html">Sponsors</a></li>
+								<li><a href="https://forms.gle/PkeeJkQmm5jyQBWt9" target="_blank">Sign Up</a></li>
 							</ul>
 						</div>
 					</li>
@@ -68,50 +71,60 @@
 						<li>
 							<img src="images/GG.png" class="center">
 							
-							<p>Gaurav Ganthapodi </br> • Conference Chair</p>
+							<p>Gaurav Ganthapodi </br> • Conference Chair
+							</br></br>  Led and organized the SCRC planning team </p>
 						</li>
 
 						<li>
 							<img src="images/chrisk.png">
-							<p>Christopher Kim </br> • Website Designer & Manager</p>
+							<p>Christopher Kim </br> • Web Development Lead
+							</br></br>Created, designed, and maintained the SCRC website.</p>
 						</li>
 						<li>
 							<img src="images/crystal.png" class="center">
-							<p>Crystal Le </br> • Media Committee</p>
+							<p>Crystal Le </br> • Media Committee
+						</br></br>Created flyers and designs for merchandise</p>
 						</li>
 						<li>
 							<img src="images/vy.png">
-							<p>Vy Tran</br> • Visual Arts Committee</p>
+							<p>Vy Tran</br> • Visual Arts Committee
+							</br></br>Assisted in filming SCRC video and printing designs on merchandise</p>
 						</li>
 
 						<li>
 							<img src="images/emmanuel.png">
-							<p>Emmanuel Nguyen</br> • Visual Arts Commitee</p>
+							<p>Emmanuel Nguyen</br> • Visual Arts Commitee
+							</br></br>Created and Edited SCRC video</p>
 						</li>
 
 						<li>
 							<img src="images/justine.png">
-							<p>Justine Batongmalaki</br> • Operations Committee</p>
+							<p>Justine Batongmalaki</br> • Operations Committee
+							</br></br>Help organize volunteers, create registration forms, organize social for SCRC</p>
 						</li>
 
 						<li>
 							<img src="images/michael.png">
-							<p>Michael Tang</br> • Marketing Lead</p>
+							<p>Michael Tang</br> • Marketing Lead
+							</br></br>Communicated and organized with company representatives and creating workshop topics for SCRC</p>
 						</li>
 
 						<li>
 							<img src="images/chrisn.png">
-							<p>Chris Nguyen</br> • Finance Lead</p>
+							<p>Chris Nguyen</br> • Finance Lead
+							</br></br>Helped finance and budget SCRC funds for conference</p>
 						</li>
 
 						<li>
 							<img src="images/nhan.png">
-							<p>Nhan Le</br> • Public Relations</p>
+							<p>Nhan Le</br> • Public Relations
+							</br></br>Communicated and organized with company representative and creating keynote speaker topics for keynote speakers</p>
 						</li>
 
 						<li>
 							<img src="images/nathan.png">
-							<p>Nathan Lara</br> • Media Committee</p>
+							<p>Nathan Lara</br> • Media Committee
+							</br></br>Created flyers and SCRC brochure</p>
 						</li>
 
 	
