--- a/about.html
+++ b/about.html
@@ -26,12 +26,15 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-												<li><a href="index.html">Home</a></li>
-												<li><a href="about.html">About</a></li>
-												<li><a href="sponsors.html">Sponsors</a></li>
-												<li><a href="sasegottalent.html">Sase got talent</a></li>
-												<li><a href="scrcteam.html">SCRC Team</a></li>
-												<li><a href="https://forms.gle/PkeeJkQmm5jyQBWt9" target="_blank">Sign Up</a></li>
+											<li><a href="index.html">Home</a></li>
+											<li><a href="about.html">About</a></li>									
+											<li><a href="sasegottalent.html">Sase got talent</a></li>
+											<li><a href="lockheedmartintour.html">Lockheed Martin Tour</a></li>
+											<li><a href="schedule.html">Schedule</a></li>
+											<li><a href="https://docs.google.com/document/d/1Hh8x9chlsCkRhm7ogExBbQn7Mp-TMBIEYBiCsiJLgjA/edit?usp=sharing" target="_blank">Arlington Guide</a></li>
+											<li><a href="scrcteam.html">SCRC Team</a></li>
+											<li><a href="sponsors.html">Sponsors</a></li>
+											<li><a href="https://forms.gle/PkeeJkQmm5jyQBWt9" target="_blank">Sign Up</a></li>
 										</ul>
 									</div>
 								</li>
