--- a/lockheedmartintour.html
+++ b/lockheedmartintour.html
@@ -29,7 +29,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="about.html">About</a></li>									
 											<li><a href="sasegottalent.html">Sase got talent</a></li>
-											<li><a href="lockheedmartintour.html">Lockheed Martin Tour</a></li>
+											<li><a href="lockheedmartintour.html">SCRC Lockheed Martin Tour</a></li>
 											<li><a href="schedule.html">Schedule</a></li>
 											<li><a href="https://docs.google.com/document/d/1Hh8x9chlsCkRhm7ogExBbQn7Mp-TMBIEYBiCsiJLgjA/edit?usp=sharing" target="_blank">Arlington Guide</a></li>
 											<li><a href="scrcteam.html">SCRC Team</a></li>
@@ -45,7 +45,7 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Lockheed Martin Tour</h2>
+							<h2>SCRC Lockheed Martin Tour</h2>
 							<p>March 20, 2020</p>
 							<ul class="actions special">
 								<li><a href="https://docs.google.com/forms/d/1AHek5ks3vVHtdvdXm-WYIj4clnJhFQTbiEreCksQTPk/" target="_blank" class="button primary">REGISTER</a></li>
@@ -56,7 +56,7 @@
 
 								
 								<h3>SASE Got Talent</h3>
-								<p><b>WHAT:</b> Lockheed Martin and PAAN Company Tour</br>
+								<p><b>WHAT:</b> SCRC Lockheed Martin and PAAN Company Tour</br>
 								<b>WHEN:</b>Evening of March 20th </br>
 								<b>WHERE:</b>Lockheed Aeronautics Base; 1 Lockheed Blvd, Fort Worth, TX 76108</br>
 								<b>WHO CAN JOIN?:</b> Professionals and students from all chapters accepted.</br>
@@ -76,7 +76,7 @@
 
 								
 
-								<h4>Photos of Lockheed Martin Tour</h4> <br/>
+								<h4>Photos of SCRC Lockheed Martin Tour</h4> <br/>
 
 								<style>
 								img {max-width: 80%;}
