--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="about.html">About</a></li>									
 											<li><a href="sasegottalent.html">Sase got talent</a></li>
-											<li><a href="lockheedmartintour.html">Lockheed Martin Tour</a></li>
+											<li><a href="lockheedmartintour.html">SCRC Lockheed Martin Tour</a></li>
 											<li><a href="schedule.html">Schedule</a></li>
 											<li><a href="https://docs.google.com/document/d/1Hh8x9chlsCkRhm7ogExBbQn7Mp-TMBIEYBiCsiJLgjA/edit?usp=sharing" target="_blank">Arlington Guide</a></li>
 											<li><a href="scrcteam.html">SCRC Team</a></li>
