--- a/lockheedmartintour.html
+++ b/lockheedmartintour.html
@@ -30,7 +30,7 @@
 											<li><a href="about.html">About</a></li>									
 											<li><a href="lockheedmartintour.html">SCRC Lockheed Martin Tour</a></li>
 											<li><a href="schedule.html">Schedule</a></li>
-											<li><a href="https://docs.google.com/document/d/1Hh8x9chlsCkRhm7ogExBbQn7Mp-TMBIEYBiCsiJLgjA/edit?usp=sharing" target="_blank">Arlington Guide</a></li>
+											<li><a href="arlingtonguide.html" target="_blank">Arlington Guide</a></li>
 											<li><a href="scrcteam.html">SCRC Team</a></li>
 											<li><a href="sponsors.html">Sponsors</a></li>
 											<li><a href="sasegottalent.html">Sase got talent</a></li>
@@ -62,7 +62,7 @@
 								<b>WHO CAN JOIN?:</b> Professionals and students from all chapters accepted.</br>
 								<b>REGISTRATION:</b> Opens January 27, 2020. Entries shall be on a first-come, first-serve basis.</br>
 								<b>DEADLINE: </b> Registration - Feb. 17th, 2020</br>
-								<br/>Learn more about Lockheed Martin Aeronautics Base from Lokcheed Martin and PAAN representatives
+								<br/>Learn more about Lockheed Martin Aeronautics Base from Lockheed Martin and PAAN representatives
 								
 
 							</p>
