--- a/arlingtonguide.html
+++ b/arlingtonguide.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>About SCRC</title>
+		<title>Arlington Guide</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">ABOUT</a></h1>
+						<h1><a href="index.html">Guide</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -30,7 +30,7 @@
 											<li><a href="about.html">About</a></li>									
 											<li><a href="lockheedmartintour.html">SCRC Lockheed Martin Tour</a></li>
 											<li><a href="schedule.html">Schedule</a></li>
-											<li><a href="https://docs.google.com/document/d/1Hh8x9chlsCkRhm7ogExBbQn7Mp-TMBIEYBiCsiJLgjA/edit?usp=sharing" target="_blank">Arlington Guide</a></li>
+											<li><a href="arlingtonguide.html" target="_blank">Arlington Guide</a></li>
 											<li><a href="scrcteam.html">SCRC Team</a></li>
 											<li><a href="sponsors.html">Sponsors</a></li>
 											<li><a href="sasegottalent.html">Sase got talent</a></li>
@@ -45,14 +45,14 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>What Exactly is SCRC?</h2>
-							<p> The Theme, Goals, and Purpose</p>
+							<h2>Arlington Guide</h2>
+							<p>Where to Eat, Sleep, and Play!</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
-
-								<h3>How we will help the next generation of scientists and engineers...</h3>
 								
+								<iframe src="images/Guide.pdf" width="100%" height="1000px">
+								</iframe>
 
 							</div>
 						</section>
