--- a/lockheedmartintour.html
+++ b/lockheedmartintour.html
@@ -55,7 +55,7 @@
 							<div class="inner">
 
 								
-								<h3>SASE Got Talent</h3>
+								<h3>SCRC Lockheed Martin Tour:</h3>
 								<p><b>WHAT:</b> SCRC Lockheed Martin and PAAN Company Tour</br>
 								<b>WHEN:</b>Evening of March 20th </br>
 								<b>WHERE:</b>Lockheed Aeronautics Base; 1 Lockheed Blvd, Fort Worth, TX 76108</br>
