--- a/lockheedmartintour.html
+++ b/lockheedmartintour.html
@@ -76,7 +76,7 @@
 
 								
 
-								<h4>Photos of SCRC Lockheed Martin Tour</h4> <br/>
+								<h4>Photos of 2019 UTA SASE Lockheed Martin Tour</h4> <br/>
 
 								<style>
 								img {max-width: 80%;}
