--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>What is SCRC?</h2>
-								<p>The South Central Regional Conference is a great opportunity for those seeking professional development. <br />
+								<h2>What is SCRC?</h2></br>
+								<iframe src="https://drive.google.com/file/d/1LzgTc37BxT8ITrP3YkvkcFXM8o3ZJ44D/preview" width="640" height="380"></iframe>
+								
+								<p></br>The South Central Regional Conference is a great opportunity for those seeking professional development. <br />
 								There will be many workshops, speakers, and networking at this event being hosted at UTA.</p>
 								
 
