--- a/index.html
+++ b/index.html
@@ -98,6 +98,17 @@
 						<div class="inner">
 							<header class="major">
 								<h2>What is SCRC?</h2></br>
+
+								<style>
+						
+									@media only screen and (max-width: 600px) {
+									  iframe {
+									max-width: 250px;
+									max-height: 180px;
+									  }
+									}
+								</style>
+
 								<iframe src="https://drive.google.com/file/d/1LzgTc37BxT8ITrP3YkvkcFXM8o3ZJ44D/preview" width="640" height="380"></iframe>
 								
 								<p></br>The South Central Regional Conference is a great opportunity for those seeking professional development. <br />
