--- a/scrcteam.html
+++ b/scrcteam.html
@@ -53,11 +53,12 @@
 
 				<style>
 						
-					img {
-						width: auto;
-						height: 300px;
-						margin-left: 25px;
-					}
+						@media only screen and (max-width: 600px) {
+  						img {
+    					max-width: 250px;
+						max-height: 180px;
+  						}
+						}
 					</style>
 
 				<img src="images/group.png" class="center">	
