--- a/sponsors.html
+++ b/sponsors.html
@@ -48,12 +48,12 @@
 		<!-- Main -->
 		<article id="main">
 			<header>
-				<h2>Our Proud Sponsers</h2>
+				<h2>Our Proud Sponsors</h2>
 				<p>A special thanks for making this possible</p>
 			</header>
 			<section id="three" class="wrapper style3 special">
 				<div class="inner">
-					<h3>Comming Soon...</h3>
+					<h3>Coming Soon...</h3>
 					<ul class="features">
 						<li>
 							<img src="" height="200">
