--- a/about.html
+++ b/about.html
@@ -5,96 +5,127 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>About SCRC</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+<head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-157014955-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-				<!-- Header -->
-					<header id="header">
-						<h1><a href="index.html">ABOUT</a></h1>
-						<nav id="nav">
+		gtag('config', 'UA-157014955-1');
+	</script>
+
+	<title>About SCRC</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
+
+<body class="is-preload">
+
+	<!-- Page Wrapper -->
+	<div id="page-wrapper">
+
+		<!-- Header -->
+		<header id="header">
+			<h1><a href="index.html">ABOUT</a></h1>
+			<nav id="nav">
+				<ul>
+					<li class="special">
+						<a href="#menu" class="menuToggle"><span>Menu</span></a>
+						<div id="menu">
 							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="about.html">About</a></li>									
-											<li><a href="lockheedmartintour.html">SCRC Lockheed Martin Tour</a></li>
-											<li><a href="schedule.html">Schedule</a></li>
-											<li><a href="arlingtonguide.html" target="_blank">Arlington Guide</a></li>
-											<li><a href="scrcteam.html">SCRC Team</a></li>
-											<li><a href="sponsors.html">Sponsors</a></li>
-											<li><a href="sasegottalent.html">Sase got talent</a></li>
-											<li><a href="https://forms.gle/PkeeJkQmm5jyQBWt9" target="_blank">Sign Up</a></li>
-										</ul>
-									</div>
-								</li>
+								<li><a href="index.html">Home</a></li>
+								<li><a href="about.html">About</a></li>
+								<li><a href="lockheedmartintour.html">SCRC Lockheed Martin Tour</a></li>
+								<li><a href="schedule.html">Schedule</a></li>
+								<li><a href="arlingtonguide.html" target="_blank">Arlington Guide</a></li>
+								<li><a href="scrcteam.html">SCRC Team</a></li>
+								<li><a href="sponsors.html">Sponsors</a></li>
+								<li><a href="sasegottalent.html">Sase got talent</a></li>
+								<li><a href="https://forms.gle/PkeeJkQmm5jyQBWt9" target="_blank">Sign Up</a></li>
 							</ul>
-						</nav>
-					</header>
+						</div>
+					</li>
+				</ul>
+			</nav>
+		</header>
 
-				<!-- Main -->
-					<article id="main">
-						<header>
-							<h2>What Exactly is SCRC?</h2>
-							<p> The Theme, Goals, and Purpose</p>
-						</header>
-						<section class="wrapper style5">
-							<div class="inner">
+		<!-- Main -->
+		<article id="main">
+			<header>
+				<h2>What Exactly is SCRC?</h2>
+				<p> The Theme, Goals, and Purpose</p>
+			</header>
+			<section class="wrapper style5">
+				<div class="inner">
 
-								<h3>How we will help the next generation of scientists and engineers...</h3>
-								<p>Our theme this year focuses on emphasizing the success of the professionals that have reached back to foster new growth and lead the younger generation to thrive along their side. We would like to highlight the following aspects that lead us to this theme:</p>
+					<h3>How we will help the next generation of scientists and engineers...</h3>
+					<p>Our theme this year focuses on emphasizing the success of the professionals that have reached
+						back to foster new growth and lead the younger generation to thrive along their side. We would
+						like to highlight the following aspects that lead us to this theme:</p>
 
-								<ul>
-										<li>We want to remind our members to always strive towards their dreams and realize that they are never alone</li>
-										<li>We want to aid them in successfully finding their passions and learn how to grow towards it efficiently</li>
-										<li>We want to provide an environment where leadership can thrive within every member of SASE like a forest of light, we can only grow brighter and stronger with time so let’s all cultivate our dreams and grow together!</li>
-									</ul>
+					<ul>
+						<li>We want to remind our members to always strive towards their dreams and realize that they
+							are never alone</li>
+						<li>We want to aid them in successfully finding their passions and learn how to grow towards it
+							efficiently</li>
+						<li>We want to provide an environment where leadership can thrive within every member of SASE
+							like a forest of light, we can only grow brighter and stronger with time so let’s all
+							cultivate our dreams and grow together!</li>
+					</ul>
 
-								<hr />
+					<hr />
 
-								<h4>An opportunity that comes only once a year</h4>
-								<p>Attending our South Central Regional Conference provides an excellent opportunity for those involved in SASE to meet new people, and reunite with friends. The conference is also a chance to network with industry professionals, various company representatives, as well as our fellow aspiring scientists and engineers. SCRC 2020 promises you with professional workshops, keynote speakers, a networking session, and social activities in order to provide unique learning and career building opportunities that you just can not find anywhere else.</p>
+					<h4>An opportunity that comes only once a year</h4>
+					<p>Attending our South Central Regional Conference provides an excellent opportunity for those
+						involved in SASE to meet new people, and reunite with friends. The conference is also a chance
+						to network with industry professionals, various company representatives, as well as our fellow
+						aspiring scientists and engineers. SCRC 2020 promises you with professional workshops, keynote
+						speakers, a networking session, and social activities in order to provide unique learning and
+						career building opportunities that you just can not find anywhere else.</p>
 
-								<p>Remember to mark your calendar for March 21st, 2020 for the South Central Regional Conference at UTA!</p>
+					<p>Remember to mark your calendar for March 21st, 2020 for the South Central Regional Conference at
+						UTA!</p>
 
-							</div>
-						</section>
-					</article>
+				</div>
+			</section>
+		</article>
 
-				<!-- Footer -->
-				<footer id="footer">
-						<ul class="icons">
-							
-							<li><a href="https://www.facebook.com/UTArlingtonSASE/" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="https://www.instagram.com/uta.sase/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-					
-							<li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=utasase@gmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-								<li> SASE</li><li>The University of Texas at Arlington</li><li><a href=privacy.html>Privacy Policy</a></li>
-						</ul>
-					</footer>
+		<!-- Footer -->
+		<footer id="footer">
+			<ul class="icons">
 
-			</div>
+				<li><a href="https://www.facebook.com/UTArlingtonSASE/" target="_blank"
+						class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+				<li><a href="https://www.instagram.com/uta.sase/" target="_blank" class="icon brands fa-instagram"><span
+							class="label">Instagram</span></a></li>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+				<li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=utasase@gmail.com" target="_blank"
+						class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+			</ul>
+			<ul class="copyright">
+				<li> SASE</li>
+				<li>The University of Texas at Arlington</li>
+				<li><a href=privacy.html>Privacy Policy</a></li>
+			</ul>
+		</footer>
 
-	</body>
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
