--- a/sponsors.html
+++ b/sponsors.html
@@ -7,6 +7,16 @@
 <html>
 
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-157014955-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'UA-157014955-1');
+	</script>
+
 	<title>SCRC Sponsors</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -30,7 +40,7 @@
 						<div id="menu">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li><a href="about.html">About</a></li>									
+								<li><a href="about.html">About</a></li>
 								<li><a href="lockheedmartintour.html">SCRC Lockheed Martin Tour</a></li>
 								<li><a href="schedule.html">Schedule</a></li>
 								<li><a href="arlingtonguide.html" target="_blank">Arlington Guide</a></li>
@@ -64,10 +74,6 @@
 							<img src="" height="200">
 
 						</li>
-
-	
-
-
 					</ul>
 				</div>
 			</section>
@@ -87,10 +93,11 @@
 						class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
 			<ul class="copyright">
-					<li> SASE</li><li>The University of Texas at Arlington</li><li><a href=privacy.html>Privacy Policy</a></li>
+				<li> SASE</li>
+				<li>The University of Texas at Arlington</li>
+				<li><a href=privacy.html>Privacy Policy</a></li>
 			</ul>
 		</footer>
-
 	</div>
 
 	<!-- Scripts -->
