--- a/lockheedmartintour.html
+++ b/lockheedmartintour.html
@@ -85,6 +85,7 @@
 
 					<hr />
 
+					
 					<h4>Registration</h4>
 					<p>To confirm that you are going, payment will be collected to reserve a spot will be $20. After the
 						tour concludes, a full refund will occur. This is to ensure limited spots for the tour are
@@ -110,6 +111,36 @@
 
 					<img src="images/lockheedtour1.png" alt="" />
 					<img src="images/lockheedtour2.png" alt="" />
+
+					<hr/>
+
+					<h4>Production Photos</h4>
+					<p>Lockheed Martin Aeronautics in Fort Worth, TX is the home to over 1-mile long production for the F-35</p>
+
+					<img src="images/jet.png" alt="" />
+					<img src="images/jet2.png" alt="" />
+		
+					<hr />
+
+					<h4>Videos</h4>
+
+					<style>
+						@media only screen and (max-width: 600px) {
+							iframe {
+								max-width: 300px;
+								max-height: 180px;
+							}
+						}
+					</style>
+					<iframe width="1269" height="714" src="https://www.youtube.com/embed/HQqLJwyVN68" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="1269" height="714" src="https://www.youtube.com/embed/df_MHNkAVrw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+					<hr/>
+					<h4>Article Links</h4>
+				</br>
+					<p><a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.f35.com%2Fmedia%2Fvideos-detail%2Fthe-f-35-factory%3Ffbclid%3DIwAR3ZlyhUBO1Gs2b4yXilpawyuwHsifPQJQr30N15fbjrYHbCVc7iCv2y_PE&h=AT3OCNxclnQ_4wZ-fVUwi75j6izsl16XEd9KJv_Bh32DIp1u6aMj7S42-rfVjcnO5lCfJADh02v9kIpzHvJU8zxNmv4x9fWYnqHaDsSzwLKQxZFwS4-W78wc-sr3rh4haE-etg">THE F-35 FACTORY</a></p>
+					<p><a href="https://www.f35.com/media/videos-detail/lockheed-martin-meets-2017-f-35-delivery-target/?fbclid=IwAR2fSw5nQ8VvEPXPeOWWr8VRLQN-HKiP1Ti5q9FAjqxR4uB4Ems1snm9ous">LOCKHEED MARTIN MEETS 2017 F-35 DELIVERY TARGET</a></p>
+
 
 				</div>
 			</section>
