--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 				<div class="image"><img src="images/secrettosuccess.png" alt="" /></div>
 				<div class="content">
 					<h2>Secret to Success</h2>
-					<p>Our speakers and sponsers will attend to give aspiring students many advices and information to
+					<p>Our speakers and sponsors will attend to give aspiring students many advices and information to
 						help guide you in acheiving your dreams.</p>
 				</div>
 			</section>
