--- a/lockheedmartintour.html
+++ b/lockheedmartintour.html
@@ -79,6 +79,7 @@
 						<b>DEADLINE: </b> Registration - Feb. 17th, 2020</br>
 						<br />Learn more about Lockheed Martin Aeronautics Base from Lockheed Martin and PAAN
 						representatives
+						<br /><strong>*Must be US Citizen to Apply</strong>
 
 
 					</p>
@@ -93,7 +94,7 @@
 						transferable to another individual (i.e. a substitution). </p>
 					<p>Substitutions may be made at no cost by providing the full name of original registered person,
 						the full name of person replacing the original registrant, having the new person fill out the
-						Google form. Email is acceptable; please email XXX with a subject line of: "ATTN: SCRC Tour
+						Google form. Email is acceptable; please email utasase@gmail.com with a subject line of: "ATTN: SCRC Tour
 						Substitution" This information MUST be received by Monday, February 17, 2020 at 8:00 AM CST </p>
 					<hr />
 
