--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
 				<h2>CULTIVATING DREAMS,<br />
 					GROWING TOGETHER
 				</h2>
+				<style>				
+				
+				img {
+					padding-left: 15px;
+					padding-right: 15px;
+					}
+					
+					</style>
+
+
+			</br><img src="images/saselogo.png" alt="" width="150"/><img src="images/utalogo.png" alt="" width="130"/>
 				<p>South Central Regional Conference<br />
 					March 21, 2020<br />
 				</p>
