--- a/index.html
+++ b/index.html
@@ -102,6 +102,13 @@
 					padding-left: 15px;
 					padding-right: 15px;
 					}
+
+					@media only screen and (max-width: 600px) {
+						img {
+							max-width: 100px;
+						
+						}
+					}
 					
 					</style>
 
