--- a/sponsors.html
+++ b/sponsors.html
@@ -59,22 +59,87 @@
 		<article id="main">
 			<header>
 				<h2>Our Proud Sponsors</h2>
-				<p>A special thanks for making this possible</p>
+				<p>Featuring Platinum, Gold, Silver, Bronze, OAC, and Participating Companies</p>
 			</header>
 			<section id="three" class="wrapper style3 special">
 				<div class="inner">
-					<h3>Coming Soon...</h3>
-					<ul class="features">
+
+					<style>
+						img {
+							max-width: 100%;
+							height: auto;
+						}
+					</style>
+
+					<img src="/images/alllogo.jpg" height="650">
+
+					<h3></br>Platinum Sponsors:</h3>
+					<p>Shell, NASA, Lockheed Martin</p>
+
+					<h3>Gold Sponsors:</h3>
+					<p>Avanade</p>
+
+					<h3>Silver Sponsors:</h3>
+					<p>Baker Hughes</p>
+
+					<h3>Bronze Sponsors:</h3>
+					<p>BNSF Railway</p>
+
+					<h3>OAC Sponsors:</h3>
+					<p>US Airforce, Wabtec Corporation</p>
+
+					<h3>Participating Companies</h3>
+					<p>UTA's College of Engineering</p>
+					<!-- <ul class="features">
 						<li>
-							<img src="" height="200">
+							<img src="/images/lockheedlogo.png" height="100">
 
 						</li>
 
 						<li>
-							<img src="" height="200">
+							<img src="/images/nasa.jpg" height="200">
+
+						</li>
+
+						<li>
+							<img src="/images/shell logo.png" height="200">
 
 						</li>
 					</ul>
+
+					<h3>Gold Sponsor</h3>
+					<ul class="features">
+						<li>
+							<img src="/images/avanade.png" height="100">
+
+						</li>
+					</ul>
+
+					<h3>Silver Sponsor</h3>
+					<ul class="features">
+						<li>
+							<img src="/images/Baker Hughes Logo (Vertical White).png" height="100">
+
+						</li>
+					</ul>
+
+					<h3>Bronze Sponsor</h3>
+					<ul class="features">
+						<li>
+							<img src="/images/pngfuel.com.png" height="100">
+
+						</li>
+					</ul>
+
+					<h3>OAC Sponsor</h3>
+					<ul class="features">
+						<li>
+							<img src="/images/pngfuel.com.png" height="100">
+
+						</li>
+					</ul> -->
+
+
 				</div>
 			</section>
 
