--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 		<section id="banner">
 			<div class="inner">
 
-				<p id="demo"></p>
+				 <p id="demo"></p>
 
 				<script>
 					// Set the date we're counting down to
-					var countDownDate = new Date("March 21, 2020 00:00:00").getTime();
+					var countDownDate = new Date("March 11, 2020 00:00:00").getTime();
 
 					// Update the count down every 1 second
 					var x = setInterval(function () {
@@ -87,32 +87,21 @@
 						// If the count down is over, write some text 
 						if (distance < 0) {
 							clearInterval(x);
-							document.getElementById("demo").innerHTML = "EXPIRED";
+							document.getElementById("demo").innerHTML = "Canceled";
 						}
 					}, 1000);
-				</script>
+				</script> 
 
 
 				<h2>CULTIVATING DREAMS,<br />
 					GROWING TOGETHER
 				</h2>
-				<style>				
 				
-				img {
-					padding-left: 15px;
-					padding-right: 15px;
-					}
-
-					
-					</style>
-
-
-			</br><img src="images/saselogo.png" alt="" width="150"/><img src="images/utalogo.png" alt="" width="130"/>
 				<p>South Central Regional Conference<br />
 					March 21, 2020<br />
 				</p>
 				<ul class="actions special">
-					<li><a href="https://forms.gle/PkeeJkQmm5jyQBWt9" target="_blank" class="button primary">SIGN UP</a>
+					<li><a href="important.html" target="_blank" class="button primary">More Info</a>
 					</li>
 				</ul>
 			</div>
