--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						// If the count down is over, write some text 
 						if (distance < 0) {
 							clearInterval(x);
-							document.getElementById("demo").innerHTML = "Canceled";
+							document.getElementById("demo").innerHTML = "2020";
 						}
 					}, 1000);
 				</script> 
